--- a/src/main/typescript/package.json
+++ b/src/main/typescript/package.json
@@ -2,9 +2,10 @@
   "name": "urban-garden-sensors",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "serve": "ng serve --proxy-config proxy.conf.json --base-href /",
     "build": "ng build",
+    "ng": "ng",
+    "start": "npm run serve",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
