* Add heroku postbuild script to package.json

--- a/src/main/typescript/package.json
+++ b/src/main/typescript/package.json
@@ -7,6 +7,7 @@
     "serve:prod": "ng serve --proxy-config proxy.conf.json --prod --base-href /",
     "build": "ng build --base-href / && npm run publish",
     "build:prod": "ng build --prod --base-href / && npm run publish",
+    "heroku-postbuild": "ng build --aot --prod",
     "start": "npm run serve",
     "publish": "gulp copy",
     "test": "ng test",
